Fix for layout issue on contestpreview

--- a/app/static/css/desktop/beta/landing.css
+++ b/app/static/css/desktop/beta/landing.css
@@ -50,7 +50,7 @@ html body .ft {
 .beta-right .fixed .get-started {
   position: absolute;
   top: -160px;
-  left: -74px;
+  left: -72px;
   width: 394px;
   height: 284px;
   background: transparent url("/images/desktop/site/beta/img_beta-get-started.png") 50% 50% no-repeat;
@@ -58,8 +58,8 @@ html body .ft {
 .beta-right .fixed .facebook-button {
   display: block;
   cursor: pointer;
-  width: 154px;
-  height: 22px;
+  width: 207px;
+  height: 42px;
   text-indent: -99999em;
   text-decoration: none;
   margin: 10px auto;
@@ -80,7 +80,7 @@ html body .ft {
 .beta-main h4,
 .beta-main h5 {
   font-style: normal;
-  font-family: 'Istok Web', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-weight: 700;
   color: #656565;
   margin-top: 0;
@@ -90,12 +90,12 @@ html body .ft {
   font-size: 38px;
 }
 .beta-main h3 {
-  font-weight: 300;
+  font-weight: 500;
   font-size: 20px;
   line-height: 1.3em;
 }
 .beta-main h4 {
-  font-weight: 300;
+  font-weight: 500;
   font-size: 17px;
   line-height: 1.4em;
 }
@@ -156,7 +156,24 @@ html body .ft {
   color: #01a9d8;
 }
 #welcome-logged-in-as {
+  padding: 0 20px;
   line-height: 1.35em;
   font-size: 11px;
   text-align: left;
+}
+#welcome-form {
+  background: #fff;
+  z-index: 20000;
+  padding: 20px;
+  -webkit-background-clip: padding-box;
+  -webkit-border-radius: 10px;
+  -moz-background-clip: padding-box;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  background-clip: padding-box;
+}
+#welcome-form .close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
 }
